@@ -1,3 +1,8 @@
+2002-10-08  Doug Evans  <dje@transmeta.com>
+	    Hans-Peter Nilsson  <hp@axis.com>
+
+	* types.scm (bitrange-overlap?): Handle lsb0?.
+
 2002-09-07  Frank Ch. Eigler  <fche@redhat.com>
 
 	From Robert Cragie <rcc@jennic.com>:
